--------------------
Bazaar Release Notes
--------------------

.. contents::

IN DEVELOPMENT
--------------

  IMPROVEMENTS:

    * Progress bars now show the rate of activity for some sftp 
      operations, and they are drawn different.  (Martin Pool, #172741)

  BUG FIXES:

    * There was a bug in how we handled resolving when a file is deleted
      in one branch, and modified in the other. If there was a criss-cross
      merge, we would cause the deletion to conflict a second time.
      (Vincent Ladeuil, John Arbash Meinel)

  COMPATIBILITY BREAKS:

    * By default, ``bzr status`` after a merge now shows just the pending
      merge tip revisions. This improves the signal-to-noise ratio after
      merging from trunk and completes much faster. To see all merged
      revisions, use the new ``-v`` flag.  (Ian Clatworthy)

    * ``bzr log --line`` now shows any tags after the date and before
      the commit message. If you have scripts which parse the output
      from this command, you may need to adjust them accordingly.
      (Ian Clatworthy)

  NEW FEATURES:

  IMPROVEMENTS:

    * ``bzr init`` will now print a little less verbose output.
      (Marius Kruger)

    * ``bzr log --short`` and ``bzr log --line`` now show tags, if any,
      for each revision. The tags are shown comma-separated inside
      ``{}``. For short format, the tags appear at the end of line
      before the optional ``[merge]`` indicator. For line format,
      the tags appear after the date. (Ian Clatworthy)

    * Rule-based preferences can now accept multiple patterns for a set of
      rules.  (Marius Kruger)

  BUG FIXES:

    * ``bzr log FILE`` now correctly shows mainline revisions merging
      a change to FILE when the ``--short`` and ``--line`` log formats
      are used. (Ian Clatworthy, #317417)

    * Don't require the present compression base in knits to be the same
      when adding records in knits. (Jelmer Vernooij, #307394)
